<resources>
    <!--    App name-->
    <string name="app_name">Nihon History</string>
    <string name="appVersion">v 0.1</string>
    <!--    Buttons text-->
    <string name="recovery2">Восстановить</string>
    <string name="test">Тест</string>
    <string name="moreInfo">Подробнее</string>
    <string name="enter">Войти</string>
    <string name="recovery"><u>Восстановить пароль</u></string>
    <string name="registration"><u>Зарегистрироваться</u></string>
    <string name="confirm">Подтвердить</string>
    <!--    ContentDescriptions for Images-->
    <string name="follow_button">follow button</string>
    <string name="filter">filter</string>
    <string name="navdrawer">navdrawer</string>
    <string name="go_back">Go back</string>
    <string name="googleSignIn">Google sign in</string>
    <!--    Edit texts hints-->
    <string name="login">Логин</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="repeatPassword">Повтор пароля</string>
    <!--    Filter edit texts hints-->
    <string name="name">Название</string>
    <string name="startDate">Дата начала</string>
    <string name="endDate">Дата окончания</string>
    <!--    Filter sub header-->
    <string name="season">Сезон</string>
    <!--    Filter buttons text-->
    <string name="all">Все</string>
    <string name="spring">Весна</string>
    <string name="summer">Лето</string>
    <string name="autumn">Осень</string>
    <string name="winter">Зима</string>
    <!--    Headers-->
    <string name="historyHeader">История</string>
    <string name="celebratesHeader">Праздники</string>
    <string name="recovering">Восстановление</string>
    <string name="signUp">Регистрация</string>
    <string name="signIn">Авторизация</string>
    <string name="repeatHeader">Повторите</string>
    <string name="selectedCelebrates">Избранные праздники</string>
    <!--    Stubs-->
    <string name="epochNameExample">Эпоха</string>
    <string name="celebrationNameExample">Праздник</string>
    <string name="percentsExample">60%</string>
    <string name="dateValue">24.04.2024</string>
    <string name="inDev">В разработке</string>
    <!--    Navigation drawer elements text-->
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="aboutUs">О приложении</string>
    <string name="shareApp">Поделиться</string>
    <string name="signOut">Выйти</string>
    <!--    Name of epochs-->
    <string name="iwajuku">Ивадзюку</string>
    <string name="jomon">Дзёмон</string>
    <string name="yayoi">Яёй</string>
    <string name="yamato">Ямато</string>
    <string name="nara">Нара</string>
    <string name="heian">Хэйан</string>
    <string name="kamakura">Камакура</string>
    <string name="muromachi">Муромати</string>
    <string name="azuchi_momoyama">Адзути-Момояма</string>
    <string name="edo">Эдо</string>
    <string name="meiji">Мэйдзи</string>
    <string name="taisho">Тайсё</string>
    <string name="showa">Сёва</string>
    <string name="heisei">Хэйсэй</string>
    <string name="reiwa">Рэйва</string>
    <string name="general">Общий тест</string>
    <!--    Period of epochs-->
    <string name="iwajukuPeriod">30 тыс. до н.э. – 13 тыс. до н.э.</string>
    <string name="jomonPeriod">13 тыс. до н.э. – III век до н.э.</string>
    <string name="yayoiPeriod">III век до н.э. – 250 г. н.э.</string>
    <string name="yamatoPeriod">250 – 710 гг.</string>
    <string name="naraPeriod">710 – 794 гг.</string>
    <string name="heianPeriod">794 – 1185 гг.</string>
    <string name="kamakuraPeriod">1185 – 1333 гг.</string>
    <string name="muromachiPeriod">1333 – 1568 гг.</string>
    <string name="azuchi_momoyamaPeriod">1568 – 1600 гг.</string>
    <string name="generalPeriod">\??? – 1600 гг.</string>
    <!--    Other-->
    <string name="recoveringText">На указанный адрес почты будет отправлена ссылка для восстановления пароля</string>
    <string name="passwordError">Пароль должен содержать хотя бы одну букву в нижнем и в верхнем регистре, цифру и специальный символ, длина как минимум 8 символов!</string>
    <string name="loginError">Логин может состоять из букв латинского алфавита верхнего и нижнего регистра, цифр, символов подчеркивания (_) и дефисов (-), и иметь длину от 3 до 20 символов!</string>
    <string name="passwordComparisonError">Пароли не совпадают!</string>
    <string name="emptyFieldsError">Заполните все поля!</string>
    <string name="emailFormatError">Неправильный формат e-mail!</string>
    <string name="recoverySuccessfullySend">Email с инструкциями по восстановлению пароля отправлен!</string>
    <string name="recoveryFailedSend">Ошибка отправки email: %1$s</string>
    <string name="incorrectLogin">Данные не подходят!</string>
    <string name="emptyFields">Заполните пустые поля!</string>
    <string name="successfullyRegistered">Пользователь %1$s зарегистрирован!</string>
    <string name="retry">Перепройти</string>
    <string name="finish">Закончить</string>
    <string name="result">%1$s\n Результат</string>


</resources>