<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <ImageButton
        android:id="@+id/goBackBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/go_back"
        android:background="@color/transparent"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="6dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:gravity="center"
            android:text="@string/signUp"
            android:textColor="@color/mainHeader"
            android:textSize="48sp"
            android:layout_marginTop="6dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:drawableStart="@drawable/ic_user"
            android:background="@drawable/input_gradient"
            android:textSize="20sp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:paddingEnd="46dp"
            android:textColorHint="@color/hints"
            android:fontFamily="@font/russo_one"
            android:gravity="center"
            android:hint="@string/login"
            android:textColor="@color/epochOnCard"
            tools:ignore="RtlCompat,RtlSymmetry"
            android:autofillHints="no"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:drawableStart="@drawable/ic_email"
            android:background="@drawable/input_gradient"
            android:textSize="20sp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:paddingEnd="46dp"
            android:textColorHint="@color/hints"
            android:fontFamily="@font/russo_one"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/epochOnCard"
            tools:ignore="RtlSymmetry"
            android:autofillHints="no"
            android:inputType="text" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_eye"
            android:textColor="@color/epochOnCard"
            android:textColorHint="@color/hints"
            android:hint="@string/password"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="16dp"
            app:passwordToggleTint="@color/epochOnCard"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:drawableStart="@drawable/ic_password"
                android:background="@drawable/input_gradient"
                android:textSize="20sp"
                android:fontFamily="@font/russo_one"
                android:gravity="center"
                android:paddingEnd="46dp"
                tools:ignore="RtlSymmetry"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_eye"
            android:textColor="@color/epochOnCard"
            android:textColorHint="@color/hints"
            android:hint="@string/repeatPassword"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="16dp"
            app:passwordToggleTint="@color/epochOnCard"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:drawableStart="@drawable/ic_password"
                android:background="@drawable/input_gradient"
                android:textSize="20sp"
                android:fontFamily="@font/russo_one"
                android:gravity="center"
                android:paddingEnd="46dp"
                tools:ignore="RtlSymmetry"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:fontFamily="@font/russo_one"
            android:backgroundTint="@color/mainBtn"
            android:textSize="24sp"
            android:layout_gravity="end"
            android:layout_margin="32dp"
            android:paddingVertical="12dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sign_bg"
            android:contentDescription="@string/recovering"
            android:scaleType="fitEnd"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>