<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:backgroundTint="@color/transparent"
    android:layout_marginHorizontal="10dp"
    app:cardElevation="0dp"
    android:layout_marginVertical="10dp">
    <RelativeLayout
        android:id="@+id/imageBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_iwajuku">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="4dp"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/btnsLayout">
        <TextView
            android:id="@+id/epochNameTW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/russo_one"
            android:gravity="center"
            android:maxLines="2"
            android:layout_marginBottom="12dp"
            android:text="@string/iwajuku"
            android:textColor="@color/epochOnCard"
            android:textSize="21sp"
            />
        <TextView
            android:id="@+id/epochPeriodTW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:gravity="center"
            android:text="@string/iwajukuPeriod"
            android:textColor="@color/epochOnCard"
            android:textSize="11sp"
            android:layout_marginBottom="4dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btnsLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_alignParentEnd="true">
        <TextView
            android:id="@+id/testPercentageTW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:gravity="center"
            android:text="@string/percentsExample"
            android:textColor="@color/epochOnCard"
            android:layout_marginTop="4dp"
            android:textSize="24sp"
            />
        <Button
            android:id="@+id/testBtn"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:text="@string/test"
            android:gravity="center"
            android:fontFamily="@font/russo_one"
            android:backgroundTint="@color/mainBtn"
            android:textSize="14sp"
            android:padding="2dp"
            />
        <Button
            android:id="@+id/goBtn"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:text="@string/moreInfo"
            android:gravity="center"
            android:fontFamily="@font/russo_one"
            android:backgroundTint="@color/mainBtn"
            android:textSize="14sp"
            android:padding="2dp"
            />

    </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>